slightly loosen the center icons css selector

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -30,6 +30,6 @@
 }
 
 /* Center icons in list-block items' media */
-.list-block > ul > li .item-content > .item-media > i {
+.list-block .item-content .item-media > i {
   margin: 0 auto;
 }
