--- a/css/my-app.css
+++ b/css/my-app.css
@@ -28,3 +28,10 @@
 .button {
 	text-transform: none;
 }
+
+/*Ongoing card*/
+.demo-card-header-pic .card-header {
+	height: 40vw;
+	background-size: cover;
+	background-position: center;
+}
