fix current dog card
- fix the card-inside-a-card effect, allow a second card header with image by refactoring into ".card .card-header.card-image-header" instead of "demo-card-header-pic .card-header"
- make the Behaviour Notes header black and bold

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -34,8 +34,8 @@
   margin: 0 auto;
 }
 
-/*Ongoing card*/
-.demo-card-header-pic .card-header {
+/* Allow cards to have an image header (on top of the normal card header) */
+.card .card-header.card-image-header {
 	height: 40vw;
 	background-size: cover;
 	background-position: center;
