--- a/css/my-app.css
+++ b/css/my-app.css
@@ -21,6 +21,13 @@
   text-transform: none;
 }
 
+/* Make badges rounder and bigger */
+.badge {
+  font-size: 13px;
+  border-radius: 12px;
+  padding: 3px 8px 0;
+}
+
 /* Reduce vertical space for content blocks */
 .content-block-title {
   margin: 8px 16px;
