do some weird fixes to map and polygons

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -59,4 +59,5 @@ app.closePanel.
   display: block;
 }
 
-#map { height: 640px; }
+/* 56 px reserved for navbar */
+#map { height: calc(100% - 56px); }
