--- a/css/my-app.css
+++ b/css/my-app.css
@@ -59,5 +59,5 @@ app.closePanel.
   display: block;
 }
 
-/* 56 px reserved for navbar */
-#map { height: calc(100% - 56px); }
+/* set height otherwise the map seems to disappear? */
+#map { height: 100%; }
