Set map width to 100%

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -60,4 +60,6 @@ app.closePanel.
 }
 
 /* set height otherwise the map seems to disappear? */
-#map { height: 100%; }
+#map { height: 100%;
+       width: 100%;
+     }
